# optimizer

./: .gitignore  README.ko.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-16-efficient-llm-router.md
docs/superpowers/specs/: 2026-06-16-efficient-llm-router-design.md
src/llm_router/: cli.py  difficulty.py  features.py  io.py  policy.py  router.py  schemas.py  training.py
tests/: test_features_difficulty.py  test_io_cli.py  test_package.py  test_policy_router.py  test_schemas.py  test_training.py
tests/fixtures/: models.jsonl  outputs.jsonl  prompts.jsonl
