[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-router"
version = "0.1.0"
description = "Local compute-optimal LLM routing for budget-aware candidate selection"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "optimizer contributors" }]
dependencies = []

[project.scripts]
llm-router = "llm_router.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
